<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio_tiempo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dm2.examen_davidblanco.Ejercicio_tiempo">

    <TextView
        android:id="@+id/tvEscoger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escoger"/>
    <Button
        android:id="@+id/btnBilbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pulsado"
        android:text="@string/bilbo"/>
    <Button
        android:id="@+id/btnVitoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pulsado"
        android:text="@string/vitoria"/>
    <Button
        android:id="@+id/btnDonosti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pulsado"
        android:text="@string/donosti"/>
    <TextView
        android:id="@+id/tvTiempoActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tiempoActual"/>
    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="right"
        android:textSize="20dp"
        android:onClick="pulsado"
        android:text="@string/volver"/>
</LinearLayout>
