<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejercicio_atomicos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dm2.examen_davidblanco.Ejercicio_atomicos">

    <TextView
        android:id="@+id/tIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce"/>
    <EditText
        android:id="@+id/etElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="pulsado"
        android:text="@string/informacion"/>
    <TextView
        android:id="@+id/tvSimbolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/simbolo"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvPunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punto"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvDensidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/densidad"
        android:textSize="17dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="190dp"
        android:layout_gravity="right"
        android:textSize="20dp"
        android:onClick="pulsado"
        android:text="@string/volver"/>

</LinearLayout>
