<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dm2.examen_davidblanco.MainActivity">

    <TextView
        android:id="@+id/MenuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuPrincipal"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnTiempo"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:onClick="pulsado"
        android:text="@string/tiempo"/>
    <Button
        android:id="@+id/btnAtomicos"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:onClick="pulsado"
        android:text="@string/atomicos"/>
    <Button
        android:id="@+id/btnMultimedia"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:onClick="pulsado"
        android:text="@string/multimedia"/>
    <Button
        android:id="@+id/btnExit"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="240dp"
        android:layout_gravity="right"
        android:textSize="20dp"
        android:onClick="pulsado"
        android:text="@string/exit"/>

</LinearLayout>
